# RayTracer2.0

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
core/: camera.cpp  interface.cpp  parser.cpp  ray.cpp  raytracer.cpp  triangle.cpp  vector3.cpp
debug/: verify_dlls.py
gui/: app.py  check_dependencies.py  safetyNet.py  test_dll.py
include/: camera.h  material.h  parser.h  ray.h  raytracer.h  triangle.h  vector3.h
